[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "getaround"
version = "0.0.1"
description = "Getaround needs to optimize minimum delay between car rentals to reduce late returns. This project involves data analysis for a dashboard to inform delay policies and building/deploying an ML pricing optimization API, accessible online with documentation."
authors = [
  { name = "nclsprsnw" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["getaround"]
include = ["pyproject.toml", "getaround/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["getaround"]
force-sort-within-sections = true

